redis removed and backend tidy up and front end validation using formik
